--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-top-loading-bar": "^2.3.1",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
