--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "razorpay": "^2.9.2",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zod-validation-error": "^2.1.0"
